[package]
name = "swing_library"
version = "0.1.0"
edition = "2024"

[dependencies]
rjvm_core = { git = "https://github.com/Lord-McSweeney/rjvm", rev = "b2707ad94ed11ae9a453d41624f1b067cabffcaa" }
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
features = ['Document', 'Element', 'HtmlElement', 'HtmlTextAreaElement', 'Node', 'Window']
version = "0.3.77"

[build-dependencies]
glob = "0.3.1"
