[package]
name = "rjvm_swing"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
regex = "=1.11.1"
rjvm_core = { git = "https://github.com/Lord-McSweeney/rjvm", rev = "b2707ad94ed11ae9a453d41624f1b067cabffcaa" }
rjvm_globals = { git = "https://github.com/Lord-McSweeney/rjvm", rev = "b2707ad94ed11ae9a453d41624f1b067cabffcaa" }
swing_library = { path = "../swing_library" }
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
features = ['Document', 'Element', 'HtmlElement', 'HtmlTextAreaElement', 'Node', 'Window']
version = "0.3.77"

# pass wasm-opt the `-g` flag to make sure it doesn't remove debug info
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O1', '-g']
